extension/skin/classic/console.css
/* ... */
.logRow-info,
.logRow-warn,
.logRow-error,
.logRow-assert,
.logRow-warningMessage,
.logRow-errorMessage {
    padding-left: 22px;
    background-repeat: no-repeat;
    background-position: 4px 2px;
}

.logRow-assert,
.logRow-warningMessage,
.logRow-errorMessage {
    padding-top: 0;
    padding-bottom: 0;
}

.logRow-info,
.logRow-info .objectLink-sourceLink {
    background-color: #EBF5FF;
}

.logRow-warn,
.logRow-warningMessage,
.logRow-warn .objectLink-sourceLink,
.logRow-warningMessage .objectLink-sourceLink {
    background-color: #FFFFC8;
}

.logRow-error,
.logRow-assert,
.logRow-errorMessage,
.logRow-error .objectLink-sourceLink,
.logRow-errorMessage .objectLink-sourceLink {
    background-color: #FFEBEB;
}

.logRow-error,
.logRow-assert,
.logRow-errorMessage {
    color: #FF0000;
}

.logRow-info {
    background-image: url(chrome://firebug/skin/infoIcon.png);
}

.logRow-warn,
.logRow-warningMessage {
    background-image: url(chrome://firebug/skin/warningIcon.png);
}

.logRow-error,
.logRow-assert,
.logRow-errorMessage {
    background-image: url(chrome://firebug/skin/errorIcon.png);
}

/*****************************************************************************************/

.objectBox {
    display: inline;
    white-space: normal;
}

.objectBox-string,
.objectBox-text,
.objectBox-number,
.objectLink-element,
.objectLink-textNode,
.objectLink-function,
.objectBox-stackTrace,
.objectLink-profile,
.objectBox-table {
    font-family: monospace;
}

.objectBox-string,
.objectBox-text,
.objectLink-textNode,
.objectBox-table {
    white-space: pre-wrap;
}

.objectBox-number,
.objectLink-styleRule,
.objectLink-element,
.objectLink-textNode {
    color: #000088;
}

.objectBox-string {
    color: #FF0000;
}

.objectLink-function,
.objectBox-stackTrace,
.objectLink-profile  {
    color: DarkGreen;
}

.objectBox-null,
.objectBox-undefined {
    font-style: italic;
    color: #787878;
}

.objectLink-sourceLink {
    position: absolute;
    right: 4px;
    top: 2px;
    padding-left: 8px;
    font-family: Lucida Grande, sans-serif;
    font-weight: bold;
    color: #0000FF;
}
.objectLink-sourceLink > .systemLink {
    float: right;
    color: #FF0000;
}

.logRow > .objectLink-sourceLink > div,
.errorSourceBox > .objectLink-sourceLink > div {
    float: left;
    padding-left: 5px;
}

/************************************************************************************************/

.errorTitle {
    margin-top: 0px;
    margin-bottom: 1px;
    padding-top: 2px;
    padding-bottom: 2px;
}

.errorTrace {
    margin-left: 17px;
    color: blue;
}

.errorDuplication {
    margin-right: 5px;
    font-weight: bold;
}

.errorSourceBox {
    margin: 2px 0;
}

.errorSource-none {
    display: none;
}

.errorSource-syntax > .errorBreak {
    visibility: hidden;
}

.errorSource {
    cursor: pointer;
    font-family: monospace;
    color: DarkGreen;
}

.errorSource:hover {
    text-decoration: underline;
}

.errorColPosition {
    -moz-user-select: none;
    font-family: monospace;
    color: DarkGreen;
    display: inline-block;
}

.errorColCaret {
    width: 7px;
    height: 8px;
    background: url(chrome://firebug/skin/console-error-caret.png) no-repeat;
    display: inline-block;
    vertical-align: top;
    margin-left: 1px;
}

.errorBreak {
    cursor: pointer;
    display: none;
    margin: 0 6px 0 0;
    width: 13px;
    height: 14px;
    vertical-align: bottom;
    background: url(chrome://firebug/skin/breakpoint.png) no-repeat;
    opacity: 0.1;
}

.errorUnbreakable {
    display: none;
}

.hasBreakSwitch .errorBreak {
    display: inline;
}

.breakForError .errorBreak {
    opacity: 1;
}

.assertDescription {
    margin: 0;
}

/*************************************************************************************************/
/* Profiler */

.logRow-profile > .logRow > .objectBox-text {
    font-family: Lucida Grande, Tahoma, sans-serif;
    color: #000000;
}

.logRow-profile > .logRow > .objectBox-text:last-child {
    color: #555555;
    font-style: italic;
}

.logRow-profile.opened > .logRow {
    padding-bottom: 4px;
}

.profilerRunning > .logRow {
    background: transparent url(chrome://firebug/skin/loading_16.gif) no-repeat 2px 0 !important;
    padding-left: 22px !important;
}

/* Remove left border for the log body. It'll be applied to the profile table so, there
   can be a little padding at the bottom when the profile-log is exapanded */
.logRow-profile .logGroupBody {
    border-left: 0;
}

.logGroup .profileTable {
    border: none;
    border-left: 1px solid #D7D7D7;
}

/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */

.logRow-table {
    padding: 0;
}

.profileSizer {
    width: 100%;
    padding-bottom: 5px;
}

.profileSizer:focus {
    outline: none;
}

.profileTable TBODY {
    overflow-x: hidden;
    overflow-y: scroll;
}

.profileTable tr:nth-child(even) {
    background-color: #EFEFEF;
}

.profileTable tr:nth-child(even) {
    background-color: #EFEFEF;
}

.profileTable .profileSummaryRow {
    height: 30px;
    background: #BBBBBB !important;
    font-weight: bold;
}

.profileTable a {
    vertical-align:middle;
}

.profileTable td {
    padding: 1px 4px 0 4px;
}

/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
/* Profiler Heaer */

.headerCell {
    cursor: pointer;
    -moz-user-select: none;
    border-bottom: 1px solid #9C9C9C;
    padding: 0 !important;
    font-weight: bold;
    background: #C8C8C8 -moz-linear-gradient(top, rgba(255, 255, 255, 0.3), rgba(0, 0, 0, 0.2));
}

.headerCellBox {
    padding: 2px 13px 2px 4px;
    border-left: 1px solid #D9D9D9;
    border-right: 1px solid #9C9C9C;
    white-space: nowrap;
}

.headerCell:hover:active {
    background-color: #B4B4B4;
}

.headerSorted {
    background-color: #8CA0BE;
}
/* ... */

